fix: horizontal scroll

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -10,16 +10,17 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
+  max-width: 100vw;
   width: 100%;
   min-height: 1080px;
   height: 100vh;
+  box-sizing: content-box;
   background-color: #0F0F0F;
   background-image: url("images/back.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   @media (max-width: 1400px) {
-    padding: 0 30px;
     height: 100%;
   }
 }
